# AERL

./: .gitignore  .python-version  README.md  evaluate_gaia_results.py  pyproject.toml  pyproject_new.toml  pyproject_original.toml  run.sh  run_all copy.sh  run_all.sh  run_all_tree_search.sh  run_eval.py  summary.md  use_gpu.py
.claude/: settings.json
.claude/plans/: individual-export-tree-fix.md
.github/workflows/: ci.yml
.opencode/: package-lock.json
.opencode/memory/: multi_turn_individual_advantage.md
areal/api/: cli_args.py  io_struct.py
areal/dataset/: __init__.py
areal/engine/: sglang_remote.py
areal/experimental/openai/: types.py
areal/infra/: remote_inf_engine.py  staleness_manager.py  workflow_executor.py
areal/models/transformers/: qwen2_vl.py  qwen3_vl.py  ulyssess_patch.py
areal/models/tree_attn/: tree.py
areal/trainer/: rl_trainer.py
areal/utils/: data.py  logging.py
customized_areal/: .env  __init__.py  backend_run.py  config_tpfc.yaml  tpfc_agent.py  tpfc_config.py  train_tpfc.py
customized_areal/clip_cov/: __init__.py  config.py  loss.py  patch.py
customized_areal/dataset/: tpfc.py
customized_areal/db_service/: __init__.py  agent_loader.py  agent_service.py  builtin.py  connection.py  messages.py  pagination.py  sandbox.py  schemas.py  tasks.py
customized_areal/models/: __init__.py
customized_areal/models/qwen3_5/: __init__.py  spec.py
customized_areal/on_policy_distill/: __init__.py
customized_areal/on_policy_distill/configs/: __init__.py  config_on_policy_distill.yaml
customized_areal/on_policy_distill/core/: __init__.py  agent.py  config.py  reward_compute.py  teacher_client.py
customized_areal/on_policy_distill/docs/: __init__.py  token_reward.md
customized_areal/on_policy_distill/engine/: COMPARISON_AND_BUGS.md  README.md  __init__.py  actor.py  fsdp_engine.py
customized_areal/on_policy_distill/examples/: __init__.py  token_reward_examples.py
customized_areal/on_policy_distill/proxy/: README.md  cache.py  cache_comparison.md  client.py  client_comparison.md  proxy_rollout_server.py  proxy_rollout_server_comparison.md  server.py  server_comparison.md  types.py  workflow.py  workflow_comparison.md
customized_areal/on_policy_distill/rewards/: __init__.py  utils.py
customized_areal/on_policy_distill/scripts/: __init__.py  test_integration.py  train_on_policy_distill.py  train_with_agent.py  train_with_cache.py
customized_areal/on_policy_distill/training/: ENGINE_MODIFICATION.md  README.md  __init__.py  actor.py  logprobs.py  loss.py  offline_train.py  test_offline_train.py  trainer.py
customized_areal/on_policy_distill_stable/: agent.py  backend_run.py  train_with_agent.py
customized_areal/optimizers/: __init__.py  muon.py  patch.py
customized_areal/optimizers/tests/: test_muon.py
customized_areal/reward/: tpfc_reward.py
customized_areal/tpfc/: .shared_auth_token.json  __init__.py  backend_run.py  benchmark_run.py  benchmark_run_.py  benchmark_run_qwen3.py  config_tpfc.yaml  config_tpfc_Qwen3-VL-4B-Instruct.yaml  config_tpfc_Qwen3-VL-8B-Instruct.yaml  config_tpfc_qwen3_5_9b.yaml  eval_utils.py  gaia_final_reward.py  run_image_qa.py  tpfc_agent.py  tpfc_config.py  tpfc_dataset.py  train_tpfc.py
customized_areal/tpfc/config/: builtin.py  builtin_new.py
customized_areal/tpfc/configs/: config_tpfc.yaml  config_tpfc_Qwen3-5L-9B-Instruct_tree_search.yaml  config_tpfc_Qwen3-5L-9B-Instruct_tree_search_v2.yaml  config_tpfc_Qwen3-5L-9B-opd.yaml  config_tpfc_Qwen3-VL-4B-Instruct.yaml  config_tpfc_Qwen3-VL-8B-Instruct.yaml  config_tpfc_Qwen3-VL-8B-Instruct_debug.yaml  config_tpfc_Qwen3-VL-8B-Instruct_tree_search.yaml  config_tpfc_qwen3_5_9b.yaml  config_tpfc_tree_distill_Qwen3-VL-8B-Instruct.yaml
customized_areal/tpfc/data/: generated_training_final_update.parquet
customized_areal/tree_search/: BUGS.md  BUGS_AND_FIXES.md  BUG_REPORT.md  CODE_REVIEW.md  README.md  __init__.py  advantage.py  checkpoint.py  config.py  distill_types.py  grouped_workflow.py  mcts_tree_store.py  migrate_checkpoint.py  patches.py  proxy_workflow.py  trainer.py  tree_search_grouped_workflow copy.py  tree_search_grouped_workflow.py  trie_node.py  turn_splitter.py  workflow_executor.py
customized_areal/tree_search_distilling/: TRAINING_PIPELINE.md  __init__.py  agent.py  trainer.py
docs/en/: cli_reference.md
docs/plans/: 2026-05-13-aerl-minimal-core-implementation.md
docs/specs/: 2026-05-13-aerl-minimal-core-design.md  2026-05-29-aerl-implementation-plan.md
docs/zh/: cli_reference.md
docs/zh/tutorial/: gsm8k_grpo.md
examples/: aerl-pricing.example.json  aerl.Dockerfile  docker-compose.yml  mock_upstream.py  use_on_policy_distill_trainer.py
examples/math/: gsm8k_grpo.yaml  gsm8k_grpo_2gpu.yaml  gsm8k_rl.py
memory/: MEMORY.md  areal_allocation_mode.md  constraint_customized_areal.md  feedback_no_validate.md  project_tpfc_training.md  user_hardware.md
src/aerl/: __init__.py  __main__.py  app.py  errors.py  jobs.py  llm_trace.py  main.py  middleware.py  paths.py  pricing_config.py  proxy.py  redact.py  service_main.py  settings.py  trace_store.py  upstream_probe.py
tests/: conftest.py  test_clip_cov.py  test_distill_bugfixes.py  test_errors.py  test_health_ready.py  test_jobs.py  test_model_response_top_logprobs.py  test_prepare_batch.py  test_pricing_config.py  test_proxy.py  test_proxy_metrics.py  test_proxy_stream.py  test_service_runs.py  test_settings.py  test_sglang_top_logprobs.py  test_trace_store.py  test_treesearch_bugfixes.py  test_treesearch_patches.py  test_truncation.py
tests/customized_areal/: test_gaia_final_reward.py  test_reward_compute.py  test_sandbox_cleanup.py  test_teacher_client.py  test_teacher_distill_integration.py  test_tpfc_backend_auth.py  test_tree_search_branch_sampling.py
tests/test_tree_search/: test_advantage.py  test_batch_consistency.py  test_cache_trainer.py  test_checkpoint.py  test_config.py  test_distill_loss.py  test_mcts_tree_store.py  test_selected_turn_distill.py  test_trainer.py  test_tree_search_grouped_workflow.py  test_trie_node.py  test_turn_splitter.py
(+172 files in other folders)
