[project]
name = "suna"
version = "1.0"
description = "open source generalist AI Worker"
authors = [{ name = "marko-kraemer", email = "mail@markokraemer.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
  "License :: OSI Approved :: Apache-2.0 License",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
  "python-dotenv==1.0.1",
  "litellm",
  "click==8.1.7",
  "questionary==2.0.1",
  "requests==2.32.3",
  "packaging",
  "setuptools==75.3.0",
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "pytest-cov==6.0.0",
  "pytest-env==1.1.5",
  "pytest-mock==3.14.0",
  "pytest-xdist==3.3.0",
  "pytest-timeout==2.3.1",
  "pytest-randomly==3.12.0",
  "pytest-rerunfailures==10.2.0",
  "asyncio==3.4.3",
  "altair==4.2.2",
  "prisma==0.15.0",
  "python-multipart==0.0.20",
  "supabase==2.28.0",
  "pyjwt==2.10.1",
  "exa-py>=2.0.1",
  "e2b-code-interpreter==1.2.0",
  "certifi==2024.2.2",
  "python-ripgrep==0.0.6",
  "openai",
  "nest-asyncio==1.6.0",
  "vncdotool==1.2.0",
  "tavily-python==0.5.4",
  "pytesseract==0.3.13",
  "stripe==11.6.0",
  "phonenumbers==8.13.50",
  "prometheus-client==0.21.1",
  "langfuse>=3.14,<4",
  "Pillow>=10.4.0",
  "mcp>=1.25.0",
  "aiohttp",
  "email-validator==2.0.0",
  "sentry-sdk[fastapi]==2.29.1",
  "gunicorn>=23.0.0",
  "cryptography>=41.0.0",
  "apscheduler>=3.11.2,<4.0.0",
  "sqlalchemy>=2.0.0",
  "psycopg>=3.1.0",
  "croniter>=1.4.0",
  "structlog==25.5.0",
  "pypdf>=6.0.0",
  "pypdfium2>=4.0.0",
  "charset-normalizer>=3.0.0",
  "python-docx==1.1.0",
  "openpyxl==3.1.2",
  "chardet==5.2.0",
  "PyYAML==6.0.1",
  "composio>=0.10.3",
  "python-pptx>=1.0.0",
  "beautifulsoup4>=4.12.0",
  "cssutils>=2.9.0",
  "daytona>=0.21.6",
  "typing-extensions==4.15.0",
  "svglib==1.5.1",
  "chunkr-ai>=0.3.7",
  "reportlab>=4.0.0",
  "freestyle>=0.0.17",
  "anthropic>=0.69.0",
  "mem0ai>=1.0.0",
  "vecs>=0.4.5",
  "markitdown>=0.1.3",
  "wikipedia>=1.4.0",
  "omegaconf>=2.3.0",
  "mutagen>=1.47.0",
  "markitdown-mcp>=0.0.1a3",
  "tenacity>=9.1.2",
  "tqdm",
  "qwen_agent",
  "transformers",
  "json5",
  "sandbox_fusion",
  "tiktoken",
  "pandas",
  "tabulate",
  "opencv-python>=4.0.0",
  "xls2xlsx>=0.2.0",
  "httpx>=0.27.0",
  "python-magic>=0.4.27",
  "webvtt-py~=0.5.1",
  "pypandoc>=1.16.2",
  "unstructured>=0.18.21",
  "dramatiq[redis]>=2.0.1",
  "redis==5.2.1",
  "sglang==0.5.7",
  "json-repair>=0.55.0",
  "cachetools>=6.2.2",
  "psycopg-binary>=3.3.2",

  # Core ML/AI libraries
  "torch>=2.9.1,<2.10",
  "torchaudio",
  "torchvision",
  "torchdata",
  "huggingface_hub",
  "datasets>=3.0.0",
  "transformers==4.57.1",
  "peft",
  "qwen_agent",
  "openai-agents",
  "anthropic",
  "openhands",
  "langchain",
  "langchain-openai",

  # Visualization
  "pandas",
  "matplotlib",
  "seaborn",

  # Utilities and data processing
  "setproctitle",
  "nltk",
  "sentencepiece",
  "einops",
  "orjson",
  "tqdm",
  "rich",
  "pydantic",
  "PyYAML",
  "omegaconf==2.4.0.dev2",
  "hydra-core==1.4.0.dev1",
  "packaging",
  "lark",
  "tabulate",
  "pybase64",
  "msgspec",
  "math-verify==0.8.0",
  "dotenv",
  "json5",
  "psutil",
  "nvidia-ml-py; sys_platform == 'linux'",
  "ninja",
  "numba",
  "blosc",
  "pybind11>=2.10.0",
  "networkx==3.3",
  "aiofiles",
  "aiohttp>=3.11.10",
  "httpx>=0.28.1",
  "pyzmq",
  "regex",
  "python_dateutil",
  "word2number",
  "pebble",
  "timeout-decorator",
  "prettytable",
  "h5py",
  "mathruler==0.1.0",

  # Monitoring and logging
  "wandb",
  "tensorboardx",
  "colorama",
  "colorlog",
  "swanboard==0.1.9b1",
  "swanlab[dashboard]==0.6.12",

  # Distributed computing
  "ray[default]",
  "redis",

  # Web frameworks
  "fastapi>=0.115.12",
  "uvicorn",
  "uvloop>=0.21.0",
  "flask",
  "tenacity",

  # Build and packaging tools
  "build>=1.2.1",
  "wheel>=0.43.0",
  "cookiecutter>2.1.1",
  "distro-info>=1.0",
  "python-debian>=0.1.49",
]

[project.urls]
homepage = "https://www.suna.so/"
repository = "https://github.com/kortix-ai/suna"

[tool.uv]
package = false

[tool.pytest.ini_options]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "orjson>=3.11.1",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "G",      # flake8-logging-format (no f-string in logger calls)
    "I",      # isort
    "N",      # pep8-naming
    "TID",    # flake8-tidy-imports (banned APIs)
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E402",   # module level import not at top (load_dotenv needs to run first)
    "E501",   # line too long (handled by formatter)
    "B904",   # raise without from (too noisy)
    "SIM105", # use contextlib.suppress (explicit try-except clearer in async)
    "SIM108", # use ternary operator (readability preference)
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.Header", "fastapi.File", "fastapi.Form"]

[tool.ruff.lint.per-file-ignores]
"api.py" = ["F401"]  # sentry import has side effects
"**/__init__.py" = ["F401"]  # re-exports
"core/agenttrain/**" = ["F821", "B018", "SIM117", "RUF034"]  # legacy module, pre-existing issues
"core/miroflow/**" = ["F821", "E722", "SIM117", "UP035"]  # deprecated module

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"fastapi.HTTPException".msg = "Use ApiError subclasses from core.common.errors instead"
"starlette.exceptions.HTTPException".msg = "Use ApiError subclasses from core.common.errors instead"

[tool.ruff.lint.isort]
known-first-party = ["core"]
force-single-line = false
combine-as-imports = true
