[project]
name = "aerl"
version = "0.1.0"
description = "OpenAI-compatible logging proxy and minimal job hook (AERL v1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.37",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.scripts]
aerl = "aerl.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aerl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
