[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "aerl"
version = "1.0.4"
description = "AERL: Agent Self-Evaluation via Reinforcement Learning (proxy, training service, and RL infrastructure)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12,<3.13"
authors = [
    {name = "River Team"},
]
maintainers = [
    {name = "River Team"},
]
keywords = [
    "distributed-systems",
    "reinforcement-learning",
    "large-language-models",
    "llm-training",
    "llm-agent",
    "agentic-rl",
]
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    # Core ML/AI libraries
    "torch>=2.9.1,<2.11; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch<2.9.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchaudio",
    "torchvision",
    "torchdata",
    # Transitive deps of torch that we want to install from local wheels
    "triton==3.5.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "nvidia-cusparselt-cu12==0.7.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "nvidia-nccl-cu12==2.27.5; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "nvidia-nvshmem-cu12==3.3.20; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sglang-kernel==0.4.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "flashinfer-cubin==0.6.7.post3",
    "huggingface_hub",
    "datasets>=3.0.0",
    "transformers>=5.0.0,<=5.3.0",
    "mistral-common>=1.11.1",
    "peft<=0.18.1",
    "qwen_agent",
    "openai-agents",
    "anthropic",
    "claude-agent-sdk",
    "litellm[proxy]>=1.81.3",
    "openhands",
    "langchain",
    "langchain-openai",
    # Visualization
    "pandas",
    "matplotlib",
    "seaborn",
    # Utilities and data processing
    "pillow>=12.1.1",
    "pylatexenc",
    "zstandard",
    "setproctitle",
    "nltk",
    "sentencepiece",
    "einops",
    "orjson",
    "tqdm",
    "rich",
    "pydantic",
    "PyYAML",
    "omegaconf==2.4.0.dev2",
    "hydra-core==1.4.0.dev1",
    "packaging",
    "lark",
    "tabulate",
    "pybase64",
    "msgspec",
    "math-verify==0.8.0",
    "python-dotenv",
    "json5",
    "psutil",
    "nvidia-ml-py; sys_platform == 'linux'",
    "ninja",
    "numba",
    "blosc",
    "pybind11>=2.10.0",
    "networkx==3.3",
    "aiofiles",
    "aiohttp>=3.13.3,<4",
    "httpx>=0.28.1",
    "certifi",
    "pyzmq",
    "regex",
    "python_dateutil",
    "word2number",
    "pebble",
    "timeout-decorator",
    "prettytable",
    "h5py",
    "mathruler==0.1.0",

    # Monitoring and logging
    "wandb",
    "tensorboardx",
    "trackio",
    "colorama",
    "colorlog",
    "swanboard==0.1.9b3",
    "swanlab[dashboard]==0.7.17",
    # Distributed computing
    "ray[default]",
    "redis",
    "awex==0.7.0",

    # Web frameworks
    "starlette>=0.37",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.27",
    "uvloop>=0.21.0",
    "flask",
    "tenacity",
    # Build and packaging tools
    "build>=1.2.1",
    "wheel>=0.43.0",
    "cookiecutter>2.1.1",
    "distro-info>=1.0",
    "python-debian>=0.1.49",
    "scipy>=1.17.1",
    "supabase>=2.28.3",
    "sglang[tracing]==0.5.10.post1",
    "daytona>=0.166.0",
    "pipx>=1.11.1",
    "claude-code>=0.0.1",
]

[project.optional-dependencies]
# CUDA-dependent extras - these packages only have Linux x86_64 wheels
# Platform markers ensure they're skipped on unsupported platforms
#
# NOTE: vLLM has a separate pyproject file (pyproject.vllm.toml) because
# sglang and vllm pin mutually-incompatible torch / torchao versions.
# See pyproject.vllm.toml for the vLLM variant.
sglang = [
    "sglang[tracing]==0.5.10.post1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "nvidia-cudnn-cu12==9.16.0.29; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchaudio; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
tms = [
    "torch_memory_saver==0.0.9; sys_platform == 'linux'",
]
kernels = [
    "kernels==0.12.2",
]
megatron = [
    "megatron-core==0.17.0; python_version >= '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "mbridge @ git+https://github.com/ISEEKYAN/mbridge.git@310e8fb; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "megatron-bridge==0.4.0; python_version >= '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
]
# Convenience extra for CUDA training packages (no inference backend)
cuda-train = [
    "areal[tms]",
    "areal[megatron]",
    "areal[kernels]",
    "nvidia-modelopt[hf]; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "tilelang>=0.1.9; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "flash-linear-attention==0.4.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
# Full CUDA setup: training packages + SGLang inference
cuda = [
    "areal[cuda-train]",
    "areal[sglang]",
    "torch; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchaudio; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
sandbox = [
    "daytona>=0.167.0",
]

[project.scripts]
aerl = "aerl.main:main"
aerl-service = "aerl.service_main:main"

[project.urls]
"Homepage" = "https://github.com/Miya-Liu/AERL"
"Repository" = "https://github.com/Miya-Liu/AERL"
"Documentation" = "https://github.com/Miya-Liu/AERL/blob/main/docs/specs/2026-05-29-aerl-implementation-plan.md"
"Bug Tracker" = "https://github.com/Miya-Liu/AERL/issues"
"Infrastructure (upstream)" = "https://github.com/inclusionAI/AReaL"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ipython",
    "ruff==0.14.9",
    "clang-format==19.1.7",
    "sh",
    "mdformat==0.7.17",
    "mdformat-gfm",
    "mdformat-tables",
    "mdformat-frontmatter",
    "plotly",
    "pre-commit",
    "sphinx",
    "sphinx-nefertiti",
    "jupyter-book==1.0.4.post1",
]

# =============================================================================
# Tool configurations: uv
# =============================================================================

[tool.uv.build-backend]
# Root package areal/ plus src/aerl (proxy, service, pipelines).
module-root = ""
source-include = ["src/aerl/**/*.py"]

[tool.uv]
# Restrict lock file resolution to supported environments
# This prevents uv from failing when CUDA-only packages don't have wheels for macOS
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
override-dependencies = [
    # litellm[proxy] conflicts with sglang's exact pins:
    # - litellm requires openai>=2.8.0, sglang pins openai==2.6.1
    # - litellm requires soundfile>=0.12.1,<0.13.0, sglang pins soundfile==0.13.1
    # sglang pins torchao==0.9.0, but we require >=0.15.0 for archon fp8
    # nvidia-cudnn-cu12 is required for SGLang Vision Models
    "openai>=2.8.0",
    "soundfile>=0.12.1,<0.13.0",
    "torchao==0.15.0",
    "nvidia-cudnn-cu12==9.16.0.29; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "flash-attn-4>=4.0.0b4",

    # Required by megatron-bridge but are optional (as per docs) cuda-based installs
    "transformer-engine; sys_platform == 'never'",
    "nv-grouped-gemm; sys_platform == 'never'",
    "mamba-ssm; sys_platform == 'never'",
    "causal-conv1d; sys_platform == 'never'",
    # nvidia-resiliency-ext 0.5.0 only ships manylinux_2_39 wheels; exclude so
    # older host kernels can still install megatron-core.
    "nvidia-resiliency-ext; sys_platform == 'never'",

    # Version conflicts with megatron-bridge (resorting to the existing version)
    "megatron-core==0.17.0; python_version >= '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "hydra-core==1.4.0.dev1",
    "timm==1.0.16",
    "transformers>=5.0.0,<=5.3.0",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
# Local wheels
torch = { path = "wheels/torch-2.9.1+cu129-cp312-cp312-manylinux_2_28_x86_64.whl" }
triton = { path = "wheels/triton-3.5.1-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl" }
nvidia-cudnn-cu12 = { path = "wheels/nvidia_cudnn_cu12-9.16.0.29-py3-none-manylinux_2_27_x86_64.whl" }
nvidia-cusparselt-cu12 = { path = "wheels/nvidia_cusparselt_cu12-0.7.1-py3-none-manylinux2014_x86_64.whl" }
nvidia-nccl-cu12 = { path = "wheels/nvidia_nccl_cu12-2.27.5-py3-none-manylinux2014_x86_64.manylinux_2_17_x86_64.whl" }
nvidia-nvshmem-cu12 = { path = "wheels/nvidia_nvshmem_cu12-3.3.20-py3-none-manylinux2014_x86_64.manylinux_2_17_x86_64.whl" }
sglang-kernel = { path = "wheels/sglang_kernel-0.4.1-cp310-abi3-manylinux2014_x86_64.whl" }
flashinfer-cubin = { path = "wheels/flashinfer_cubin-0.6.7.post3-py3-none-any.whl" }
torchaudio = [
    { index = "pytorch-cu129", extra = "sglang" },
    { index = "pytorch-cu129", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-cu129", extra = "sglang" },
    { index = "pytorch-cu129", extra = "cuda" },
]

# =============================================================================
# Tool configurations: pytest
# =============================================================================

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning:torch.*",
    "ignore::UserWarning:transformers.*",
]
markers = [
    "slow: mark test as slow, expected to cost more than 30 seconds and will not run in CI by default.",
    "ci: mark test as must-run in CI (only marked for slow tests).",
    "gpu: mark test that uses a single GPU",
    "multi_gpu: mark test that uses more than one GPU",
    "sglang: mark test that requires the SGLang inference backend",
    "vllm: mark test that requires the vLLM inference backend",
    "integration: requires external services or credentials",
]

# =============================================================================
# Tool configurations: ruff
# =============================================================================

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = [
    "E501",  # E501 Line too long
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "areal",
    "local-folder",
]
from-first = false

[tool.ruff.lint.isort.sections]
"areal" = ["areal"]
